2013-03-06  Benjamin Poulain  <benjamin@webkit.org>

        WebKitTestRunner needs layoutTestController.elementDoesAutoCompleteForElementWithId
        https://bugs.webkit.org/show_bug.cgi?id=42696

        Reviewed by Andreas Kling.

        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        * WebCoreSupport/DumpRenderTreeSupportQt.h:

2013-03-06  Allan Sandfeld Jensen  <allan.jensen@digia.com>

        [Qt] Illegal narrowing in tst_qwebhistory
        https://bugs.webkit.org/show_bug.cgi?id=111562

        Reviewed by Jocelyn Turcotte.

        The bytearray in tst_QWebHistory::restoreIncompatibleVersion1 has integer
        values higher than 127 assigned into an array of signed chars. This causes
        compiler errors in C++11 since it assigns constants (>127) that does not
        fit the destination (-128 to 127)

        * tests/qwebhistory/tst_qwebhistory.cpp:
        (tst_QWebHistory::restoreIncompatibleVersion1):

2013-03-03  Adam Barth  <abarth@webkit.org>

        Unreviewed attempted build fix. Adds back some includes removed in
        http://trac.webkit.org/changeset/144565.

        * WebCoreSupport/NotificationPresenterClientQt.cpp:
        * WebCoreSupport/QWebPageAdapter.cpp:

2013-03-03  Adam Barth  <abarth@webkit.org>

        Unreviewed rollout of http://trac.webkit.org/r144530
        As described in https://bugs.webkit.org/show_bug.cgi?id=111167 and
        https://bugs.webkit.org/show_bug.cgi?id=111035, this patch caused a
        large number of ASSERTs in chromium-win.

        * WebCoreSupport/NotificationPresenterClientQt.cpp:
        * WebCoreSupport/QWebPageAdapter.cpp:

2013-03-02  Benjamin Poulain  <bpoulain@apple.com>

        Move computedStyleIncludingVisitedInfo from TestRunner to Internals
        https://bugs.webkit.org/show_bug.cgi?id=109772

        Reviewed by Andreas Kling.

        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        * WebCoreSupport/DumpRenderTreeSupportQt.h:
