@@ -1,3 +1,13 @@
+2013-03-07  Arunprasad Rajkumar  <arunprasadr@nds.com>
+
+        [Qt] QWebSettings::clearMemoryCaches should clear JS garbage
+        https://bugs.webkit.org/show_bug.cgi?id=111094
+
+        Reviewed by Jocelyn Turcotte.
+
+        * Api/qwebsettings.cpp:
+        (QWebSettings::clearMemoryCaches):
+
 2013-03-06  Benjamin Poulain  <benjamin@webkit.org>
 
         WebKitTestRunner needs layoutTestController.elementDoesAutoCompleteForElementWithId
